--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,24 +1,45 @@
-*.log
-.DS_Store
+# → Arquivos sensíveis de ambiente
 .env
-.env.backup
-.env.production
-.phpactor.json
-.phpunit.result.cache
-/.fleet
-/.idea
-/.nova
-/.phpunit.cache
-/.vscode
-/.zed
-/auth.json
-/node_modules
-/public/build
-/public/hot
-/public/storage
+.env.*
+auth.json
+
+# → Dependências
+/vendor/
+/node_modules/
+
+# → Diretórios de build front-end (Mix, Vite, etc.)
+/public/build/
+/public/hot/
+/public/storage/
+
+# → Cache e logs
 /storage/*.key
 /storage/pail
-/vendor
-Homestead.json
-Homestead.yaml
-Thumbs.db
+/storage/*.log
+/*.log
+.phpunit.result.cache
+.phpunit.cache
+phpunit.xml*
+.phpactor.json
+
+# → IDEs e editores
+/.vscode/
+/.idea/
+/.fleet/
+/.zed/
+/Homestead.json
+/Homestead.yaml
+/.nova
+/.DS_Store
+/Thumbs.db
+
+# → Arquivos Docker locais e volumes
+# (evite versionar dados do MySQL e arquivos temporários de containers)
+mysql_data/
+/docker-compose.override.yml
+/docker-compose.override.yaml
+*.pid
+*.sock
+
+# → Outros
+/public/.env
