--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   app:
     build:
@@ -7,15 +5,11 @@ services:
       dockerfile: Dockerfile
     container_name: laravel_app
     volumes:
-      - ./src:/var/www
+      - ./src:/var/www           # sincroniza seu código
     ports:
-      - "8000:8000"
+      - "8000:80"                # mapeia porta 80 do Apache para 8000 da sua máquina
     depends_on:
       - db
-    working_dir: /var/www
-    command: php -S 0.0.0.0:8000 -t public
-    
-    
 
   db:
     image: mysql:8.0
@@ -30,17 +24,20 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      
+
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     restart: always
     ports:
-      - 8081:80
+      - "8081:80"
     environment:
       PMA_HOST: db
-      MYSQL_ROOT_PASSWORD: root
+      PMA_PORT: 3306
+      PMA_USER: root
+      PMA_PASSWORD: root
     depends_on:
       - db
 
 volumes:
   db_data:
+
